# Code_And_Cognition

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  test_mongo_connection.py
.github/workflows/: deploy.yml
app/: __init__.py  main.py
app/controllers/: auth_controller.py  post_controller.py
app/db/: mongo_db.py
app/model/: post_model.py  user_model.py
app/routes/: auth_routes.py  health_routes.py  post_routes.py
app/utils/: auth_utils.py  supabase_utils.py
nginx/: nginx-initial.conf  nginx-main.conf  nginx-simple.conf  nginx-subdomain.conf  nginx.conf
